# generic_local_planner

./: .gitignore  local_planner.rviz
Nimbus_Component/: local_nimbus.json
src/navigation/cogniteam-test-local-planner/: CMakeLists.txt  package.xml
src/navigation/cogniteam-test-local-planner/launch/: cogniteam_test_local_planner.launch  local_planner.launch
src/navigation/cogniteam-test-local-planner/param/: base_local_planner_params.yaml
src/navigation/cogniteam-test-local-planner/src/: cogniteam_test_local_planner_node.cpp
src/navigation/cogniteam-test-local-planner/waypoints/: square.yaml
src/navigation/twist_to_ackermann/src/: twist_to_ackermann_node.py
